--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "tsc",
-    "build:watch": "tsc --watch",
-    "postinstall": "tsc --config tsconfig.json ./src"
+    "build:watch": "tsc --watch"
   },
   "peerDependencies": {
     "@xstate/react": "^0.8.1",
